// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SsmParameterGroup > grantToFunction with "read" permission 1`] = `
{
  "MyOtherTestFunction7633676A": {
    "DependsOn": [
      "MyOtherTestFunctionServiceRole6B72F272",
    ],
    "Properties": {
      "Code": {
        "ZipFile": "foo",
      },
      "Handler": "index.handler",
      "Role": {
        "Fn::GetAtt": [
          "MyOtherTestFunctionServiceRole6B72F272",
          "Arn",
        ],
      },
      "Runtime": "nodejs20.x",
    },
    "Type": "AWS::Lambda::Function",
  },
  "MyTestFunctionE5665775": {
    "DependsOn": [
      "MyTestFunctionServiceRoleDefaultPolicy11BBEF1A",
      "MyTestFunctionServiceRole1183FD15",
    ],
    "Properties": {
      "Code": {
        "ZipFile": "foo",
      },
      "Environment": {
        "Variables": {
          "PARAM_ONE": {
            "Ref": "MyTestParametersParam137FCD884",
          },
          "PARAM_TWO": {
            "Ref": "MyTestParametersParam24E319C53",
          },
        },
      },
      "Handler": "index.handler",
      "Role": {
        "Fn::GetAtt": [
          "MyTestFunctionServiceRole1183FD15",
          "Arn",
        ],
      },
      "Runtime": "nodejs20.x",
    },
    "Type": "AWS::Lambda::Function",
  },
}
`;

exports[`SsmParameterGroup > grantToFunction with "read" permission 2`] = `
{
  "MyTestFunctionServiceRoleDefaultPolicy11BBEF1A": {
    "Properties": {
      "PolicyDocument": {
        "Statement": [
          {
            "Action": [
              "ssm:DescribeParameters",
              "ssm:GetParameters",
              "ssm:GetParameter",
              "ssm:GetParameterHistory",
            ],
            "Effect": "Allow",
            "Resource": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":ssm:",
                  {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":parameter",
                  {
                    "Ref": "MyTestParametersParam137FCD884",
                  },
                ],
              ],
            },
          },
          {
            "Action": [
              "ssm:DescribeParameters",
              "ssm:GetParameters",
              "ssm:GetParameter",
              "ssm:GetParameterHistory",
            ],
            "Effect": "Allow",
            "Resource": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":ssm:",
                  {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":parameter",
                  {
                    "Ref": "MyTestParametersParam24E319C53",
                  },
                ],
              ],
            },
          },
        ],
        "Version": "2012-10-17",
      },
      "PolicyName": "MyTestFunctionServiceRoleDefaultPolicy11BBEF1A",
      "Roles": [
        {
          "Ref": "MyTestFunctionServiceRole1183FD15",
        },
      ],
    },
    "Type": "AWS::IAM::Policy",
  },
}
`;

exports[`SsmParameterGroup > grantToFunction with "readwrite" permission 1`] = `
{
  "MyOtherTestFunction7633676A": {
    "DependsOn": [
      "MyOtherTestFunctionServiceRole6B72F272",
    ],
    "Properties": {
      "Code": {
        "ZipFile": "foo",
      },
      "Handler": "index.handler",
      "Role": {
        "Fn::GetAtt": [
          "MyOtherTestFunctionServiceRole6B72F272",
          "Arn",
        ],
      },
      "Runtime": "nodejs20.x",
    },
    "Type": "AWS::Lambda::Function",
  },
  "MyTestFunctionE5665775": {
    "DependsOn": [
      "MyTestFunctionServiceRoleDefaultPolicy11BBEF1A",
      "MyTestFunctionServiceRole1183FD15",
    ],
    "Properties": {
      "Code": {
        "ZipFile": "foo",
      },
      "Environment": {
        "Variables": {
          "PARAM_ONE": {
            "Ref": "MyTestParametersParam137FCD884",
          },
          "PARAM_TWO": {
            "Ref": "MyTestParametersParam24E319C53",
          },
        },
      },
      "Handler": "index.handler",
      "Role": {
        "Fn::GetAtt": [
          "MyTestFunctionServiceRole1183FD15",
          "Arn",
        ],
      },
      "Runtime": "nodejs20.x",
    },
    "Type": "AWS::Lambda::Function",
  },
}
`;

exports[`SsmParameterGroup > grantToFunction with "readwrite" permission 2`] = `
{
  "MyTestFunctionServiceRoleDefaultPolicy11BBEF1A": {
    "Properties": {
      "PolicyDocument": {
        "Statement": [
          {
            "Action": "ssm:PutParameter",
            "Effect": "Allow",
            "Resource": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":ssm:",
                  {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":parameter",
                  {
                    "Ref": "MyTestParametersParam137FCD884",
                  },
                ],
              ],
            },
          },
          {
            "Action": [
              "ssm:DescribeParameters",
              "ssm:GetParameters",
              "ssm:GetParameter",
              "ssm:GetParameterHistory",
            ],
            "Effect": "Allow",
            "Resource": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":ssm:",
                  {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":parameter",
                  {
                    "Ref": "MyTestParametersParam137FCD884",
                  },
                ],
              ],
            },
          },
          {
            "Action": "ssm:PutParameter",
            "Effect": "Allow",
            "Resource": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":ssm:",
                  {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":parameter",
                  {
                    "Ref": "MyTestParametersParam24E319C53",
                  },
                ],
              ],
            },
          },
          {
            "Action": [
              "ssm:DescribeParameters",
              "ssm:GetParameters",
              "ssm:GetParameter",
              "ssm:GetParameterHistory",
            ],
            "Effect": "Allow",
            "Resource": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":ssm:",
                  {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":parameter",
                  {
                    "Ref": "MyTestParametersParam24E319C53",
                  },
                ],
              ],
            },
          },
        ],
        "Version": "2012-10-17",
      },
      "PolicyName": "MyTestFunctionServiceRoleDefaultPolicy11BBEF1A",
      "Roles": [
        {
          "Ref": "MyTestFunctionServiceRole1183FD15",
        },
      ],
    },
    "Type": "AWS::IAM::Policy",
  },
}
`;

exports[`SsmParameterGroup > grantToFunction with "write" permission 1`] = `
{
  "MyOtherTestFunction7633676A": {
    "DependsOn": [
      "MyOtherTestFunctionServiceRole6B72F272",
    ],
    "Properties": {
      "Code": {
        "ZipFile": "foo",
      },
      "Handler": "index.handler",
      "Role": {
        "Fn::GetAtt": [
          "MyOtherTestFunctionServiceRole6B72F272",
          "Arn",
        ],
      },
      "Runtime": "nodejs20.x",
    },
    "Type": "AWS::Lambda::Function",
  },
  "MyTestFunctionE5665775": {
    "DependsOn": [
      "MyTestFunctionServiceRoleDefaultPolicy11BBEF1A",
      "MyTestFunctionServiceRole1183FD15",
    ],
    "Properties": {
      "Code": {
        "ZipFile": "foo",
      },
      "Environment": {
        "Variables": {
          "PARAM_ONE": {
            "Ref": "MyTestParametersParam137FCD884",
          },
          "PARAM_TWO": {
            "Ref": "MyTestParametersParam24E319C53",
          },
        },
      },
      "Handler": "index.handler",
      "Role": {
        "Fn::GetAtt": [
          "MyTestFunctionServiceRole1183FD15",
          "Arn",
        ],
      },
      "Runtime": "nodejs20.x",
    },
    "Type": "AWS::Lambda::Function",
  },
}
`;

exports[`SsmParameterGroup > grantToFunction with "write" permission 2`] = `
{
  "MyTestFunctionServiceRoleDefaultPolicy11BBEF1A": {
    "Properties": {
      "PolicyDocument": {
        "Statement": [
          {
            "Action": "ssm:PutParameter",
            "Effect": "Allow",
            "Resource": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":ssm:",
                  {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":parameter",
                  {
                    "Ref": "MyTestParametersParam137FCD884",
                  },
                ],
              ],
            },
          },
          {
            "Action": "ssm:PutParameter",
            "Effect": "Allow",
            "Resource": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":ssm:",
                  {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":parameter",
                  {
                    "Ref": "MyTestParametersParam24E319C53",
                  },
                ],
              ],
            },
          },
        ],
        "Version": "2012-10-17",
      },
      "PolicyName": "MyTestFunctionServiceRoleDefaultPolicy11BBEF1A",
      "Roles": [
        {
          "Ref": "MyTestFunctionServiceRole1183FD15",
        },
      ],
    },
    "Type": "AWS::IAM::Policy",
  },
}
`;

exports[`SsmParameterGroup > grantToFunctions grants to multiple functions 1`] = `
{
  "MyOtherTestFunction7633676A": {
    "DependsOn": [
      "MyOtherTestFunctionServiceRoleDefaultPolicy646DF3D8",
      "MyOtherTestFunctionServiceRole6B72F272",
    ],
    "Properties": {
      "Code": {
        "ZipFile": "foo",
      },
      "Environment": {
        "Variables": {
          "PARAM_ONE": {
            "Ref": "MyTestParametersParam137FCD884",
          },
          "PARAM_TWO": {
            "Ref": "MyTestParametersParam24E319C53",
          },
        },
      },
      "Handler": "index.handler",
      "Role": {
        "Fn::GetAtt": [
          "MyOtherTestFunctionServiceRole6B72F272",
          "Arn",
        ],
      },
      "Runtime": "nodejs20.x",
    },
    "Type": "AWS::Lambda::Function",
  },
  "MyTestFunctionE5665775": {
    "DependsOn": [
      "MyTestFunctionServiceRoleDefaultPolicy11BBEF1A",
      "MyTestFunctionServiceRole1183FD15",
    ],
    "Properties": {
      "Code": {
        "ZipFile": "foo",
      },
      "Environment": {
        "Variables": {
          "PARAM_ONE": {
            "Ref": "MyTestParametersParam137FCD884",
          },
          "PARAM_TWO": {
            "Ref": "MyTestParametersParam24E319C53",
          },
        },
      },
      "Handler": "index.handler",
      "Role": {
        "Fn::GetAtt": [
          "MyTestFunctionServiceRole1183FD15",
          "Arn",
        ],
      },
      "Runtime": "nodejs20.x",
    },
    "Type": "AWS::Lambda::Function",
  },
}
`;

exports[`SsmParameterGroup > grantToFunctions grants to multiple functions 2`] = `
{
  "MyOtherTestFunctionServiceRoleDefaultPolicy646DF3D8": {
    "Properties": {
      "PolicyDocument": {
        "Statement": [
          {
            "Action": [
              "ssm:DescribeParameters",
              "ssm:GetParameters",
              "ssm:GetParameter",
              "ssm:GetParameterHistory",
            ],
            "Effect": "Allow",
            "Resource": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":ssm:",
                  {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":parameter",
                  {
                    "Ref": "MyTestParametersParam137FCD884",
                  },
                ],
              ],
            },
          },
          {
            "Action": [
              "ssm:DescribeParameters",
              "ssm:GetParameters",
              "ssm:GetParameter",
              "ssm:GetParameterHistory",
            ],
            "Effect": "Allow",
            "Resource": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":ssm:",
                  {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":parameter",
                  {
                    "Ref": "MyTestParametersParam24E319C53",
                  },
                ],
              ],
            },
          },
        ],
        "Version": "2012-10-17",
      },
      "PolicyName": "MyOtherTestFunctionServiceRoleDefaultPolicy646DF3D8",
      "Roles": [
        {
          "Ref": "MyOtherTestFunctionServiceRole6B72F272",
        },
      ],
    },
    "Type": "AWS::IAM::Policy",
  },
  "MyTestFunctionServiceRoleDefaultPolicy11BBEF1A": {
    "Properties": {
      "PolicyDocument": {
        "Statement": [
          {
            "Action": [
              "ssm:DescribeParameters",
              "ssm:GetParameters",
              "ssm:GetParameter",
              "ssm:GetParameterHistory",
            ],
            "Effect": "Allow",
            "Resource": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":ssm:",
                  {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":parameter",
                  {
                    "Ref": "MyTestParametersParam137FCD884",
                  },
                ],
              ],
            },
          },
          {
            "Action": [
              "ssm:DescribeParameters",
              "ssm:GetParameters",
              "ssm:GetParameter",
              "ssm:GetParameterHistory",
            ],
            "Effect": "Allow",
            "Resource": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":ssm:",
                  {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":parameter",
                  {
                    "Ref": "MyTestParametersParam24E319C53",
                  },
                ],
              ],
            },
          },
        ],
        "Version": "2012-10-17",
      },
      "PolicyName": "MyTestFunctionServiceRoleDefaultPolicy11BBEF1A",
      "Roles": [
        {
          "Ref": "MyTestFunctionServiceRole1183FD15",
        },
      ],
    },
    "Type": "AWS::IAM::Policy",
  },
}
`;
